# agent-pulsar

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: c20f81597fbf_initial_schema.py
docker/payroll/: Dockerfile
docs/: TRACKER.md  agent-pulsar-architecture.html  api-spec.md  brainstorm-differentiation.md  brainstorm-multi-agent-reliability.md  design.md  development-guide.md  event-schema.md  requirements.md
scripts/: run_setup_wizard.py  run_worker.py  start.sh
skills/agent-pulsar/: SKILL.md
src/agent_pulsar/: __init__.py  config.py
src/agent_pulsar/config_portal/: __init__.py  app.py  link_manager.py  routes.py  schemas.py
src/agent_pulsar/event_bus/: __init__.py  base.py  redis_streams.py
src/agent_pulsar/llm/: __init__.py  client.py
src/agent_pulsar/persistence/: __init__.py  database.py  models.py  repository.py
src/agent_pulsar/schemas/: __init__.py  enums.py  events.py
src/agent_pulsar/security/: __init__.py  broker_api.py  credential_provider.py  schemas.py  token_broker.py  vault_client.py
src/agent_pulsar/setup_wizard/: __init__.py  app.py  checks.py  (+1 more)
tests/: conftest.py
tests/e2e/: test_task_flow.py
tests/integration/: test_event_bus_redis.py  test_persistence.py
tests/unit/: test_calendar_worker.py  test_config_portal.py  test_credential_provider.py  test_docker_runner.py  test_event_bus.py  test_general_worker.py  test_model_router.py  test_payroll_worker.py  test_registry.py  test_schemas.py  test_setup_wizard.py  test_token_broker.py  test_vault_client.py
(+28 files in other folders)
